Primer dia proyecto

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <!--PANTALLA INICIO-->
   <div id="splash-screen" class ="container">
-    <img src="./Images/Logo.png" alt="logo" width="500">  
-    <button id="start-btn">POOP!</button>
+    <img src="./Images/logo.png" alt="logo" width="500">  
+    <button id="start-btn">Let's poop!</button>
     <div id="instructions">
         <h4>INSTRUCTIONS</h4>
         <ol>
@@ -33,11 +33,12 @@
 
   <!--PANTALLA FINAL-->
   <div id="game-over-screen" class="container">
-    <img src="./Images/gameOverLogo.PNG" alt="game-over" width="400">
+    <img src="./Images/gameover.png" alt="game-over" width="400">
   </div>
 
 <script src="./js/main.js"></script>
 <script src="./js/Paloma.js"></script>
+<script src="./js/Bullet.js"></script>
 <script src="./js/Objetivo.js"></script>
 
 </body>
