--- a/index.html
+++ b/index.html
@@ -18,18 +18,21 @@
           <li>Press A to move to the left</li>
           <li>Press D to move to the right</li>
           <li>Press S to poop</li>
-          <li>(press W to jump)</li>
+          <li>Press W to jump</li>
           <li>Aim carefully!</li>
         </ol>
         <p>Show the world who is in charge by leaving your mark on everything! But be careful! Not everyone will let you do your job peacefully...</p>
     </div>
     <div id="targets">
       <h4> KNOW YOUR TARGETS</h4>
-      <p>Grandma: the easiest target! She's so slow, you'll get 1 point in your way tot he top</p>
-      <p>Kid: not the fastest, but pretty small! You'll get 2 points for hitting him!</p>
-      <p>Bike: he always arrives sweaty wherever he may go so... another reason to smell bad won't matter! 3 points for catching him</p>
-      <p>Mini: there are so many cars like this one... I never know if I pooped on it yet or maybe it's a new one. You'll get 4 points.</p>
-      <p>Convertible: I mean... what's funniest than hearing someone scream on their car after our lovely gift... 5 points if you get them!</p>
+      <ul>
+        <li>Grandma: the easiest target! She's so slow, you'll get 1 point in your way to the top</li>
+        <li>Kid: not the fastest, but pretty small! You'll get 2 points for hitting him!</li>
+        <li>Bike: he always arrives sweaty wherever he may go so... another reason to smell bad won't matter! 3 points for catching him</li>
+        <li>Mini: there are so many cars like this one... I never know if I pooped on it yet or maybe it's a new one. You'll get 4 points.</li>
+        <li>Convertible: I mean... what's funniest than hearing someone scream on their car after our lovely gift... 5 points if you get them!</li>
+        <li>Cat: Watch out!! the cats around the neighborhood are always hungry and they keep coming!</li>
+      </ul>
     </div>
     <div id="classification">
       <h4>POPULARITY CONTEST</h4>
@@ -38,6 +41,7 @@
 
   <!--PANTALLA DE JUEGO-->
   <div id="game-screen" class="container">
+    <div id="scoreDisplay">Points: 0</div>
     <!--Elementos de vidas y puntuación antes del game-box-->
     <div id="game-box">
     </div>
