--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>El Ataque de las Palomas</title>
+  <title>Pigeon's attack!</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -50,6 +50,9 @@
   <!--PANTALLA FINAL-->
   <div id="game-over-screen" class="container">
     <img src="./Images/gameover.png" alt="game-over" width="400">
+      <div id="classification"></div>
+        <h4>POPULARITY CONTEST</h4>
+        <ul></ul>
     <button id="restart-btn">Try again!</button>
     <button id="menu-btn">Main menu</button>
   </div>
