--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
 
   <!--PANTALLA DE JUEGO-->
   <div id="game-screen" class="main-container">
-
-    <div id="scoreDisplay">Points: 0</div>
+    <div id="options">
+      <div id="scoreDisplay">Points: 0</div>
+      <button id="mute"></button>
+    </div>
 
     <!--Elementos de vidas y puntuación antes del game-box-->
     <div id="game-box">
