--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
   <div id="game-screen" class="main-container">
     <div id="options">
       <div id="scoreDisplay">Points: 0</div>
-      <button id="mute"></button>
+      <button id="music-on" class="music">Music: ON</button>
+      <button id="music-off" class="music">Music: Off</button>
     </div>
 
     <!--Elementos de vidas y puntuación antes del game-box-->
